--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-#B_a_r_c_i_k
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Local configuration file (sdk path, etc)
+local.properties
 
 # Gradle files
 .gradle/
@@ -15,3 +21,12 @@
 ehthumbs.db
 Thumbs.db
 
+# Version control
+vcs.xml
+
+# lint
+lint/intermediates/
+lint/generated/
+lint/outputs/
+lint/tmp/
+lint/reports/
